--- a/index.html
+++ b/index.html
@@ -4,78 +4,97 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
+  <!-- body -->
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li>
-            <a href="">Portfolio</a>
+    <header class="header">
+      <nav class="menu">
+        <a class="logo" href="./index.html">WebStudio</a>
+        <ul class="list">
+          <li class="menu-item">
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
+
       <!-- contacts -->
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="list">
+          <li>
+            <a class="mail link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="phone-number link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
+
     <!-- main  -->
     <main>
-      <!-- Section1 -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!-- HERO -->
+      <section class="section-hero">
+        <h1 class="text-hero">Effective Solutions for Your Business</h1>
+        <button class="button-main" type="button">Order Service</button>
       </section>
+
       <!-- section2 -->
       <section>
         <h2 hidden>features</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-
-            <p>
+            <h3 class="title-description">Strategy</h3>
+            <p class="text-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="title-description">Punctuality</h3>
+            <p class="text-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="title-description">Diligence</h3>
+            <p class="text-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="title-description">Technologies</h3>
+            <p class="text-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
+      <!-- section2 -->
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="title-text">What are we doing</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/ourworks/img1.jpg"
@@ -102,9 +121,10 @@
           </li>
         </ul>
       </section>
+      <!-- section3 -->
       <section>
-        <h2>Our Team</h2>
-        <ul>
+        <h2 class="title-text">Our Team</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/team/mark-guerrero.jpg"
@@ -149,8 +169,8 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a class="logo" href="./index.html">WebStudio</a>
+      <p class="text-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
