--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -18,7 +18,9 @@
   <body>
     <header class="header">
       <nav class="menu">
-        <a class="logo" href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html"
+          >Web<span class="header-logo-studio">Studio</span>
+        </a>
         <ul class="list">
           <li class="menu-item">
             <a class="menu-link link" href="./index.html">Studio</a>
@@ -33,7 +35,7 @@
       </nav>
 
       <!-- contacts -->
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
             <a class="mail link" href="mailto:info@devstudio.com"
@@ -91,7 +93,7 @@
           </li>
         </ul>
       </section>
-      <!-- section2 -->
+      <!-- section3 -->
       <section>
         <h2 class="title-text">What are we doing</h2>
         <ul class="list">
@@ -121,56 +123,58 @@
           </li>
         </ul>
       </section>
-      <!-- section3 -->
-      <section>
+      <!-- Team -->
+      <section class="team-section">
         <h2 class="title-text">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="team-img">
             <img
               src="./images/team/mark-guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-text">Mark Guerrero</h3>
+            <p class="team-secondary-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-img">
             <img
               src="./images/team/tom-ford.jpg"
               alt="tom-ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-text">Tom Ford</h3>
+            <p class="team-secondary-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-img">
             <img
               src="./images/team/camila-garcia.jpg"
               alt="camila-garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-text">Camila Garcia</h3>
+            <p class="team-secondary-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-img">
             <img
               src="./images/team/daniel-wilson.jpg"
               alt="daniel-wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-text">Daniel Wilson</h3>
+            <p class="team-secondary-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a class="logo" href="./index.html">WebStudio</a>
-      <p class="text-description">
+    <footer class="footer">
+      <a class="logo link" href="./index.html"
+        >Web<span class="footer-logo-studio">Studio</span>
+      </a>
+      <p class="footer-text-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
