--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,9 @@
   <body>
     <header class="header">
       <nav class="menu">
-        <a class="logo" href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html"
+        >Web<span class="header-logo-studio">Studio</span>
+      </a>
         <ul class="list">
           <li class="menu-item">
             <a class="menu-link link" href="./index.html">Studio</a>
@@ -33,7 +35,7 @@
       </nav>
 
       <!-- contacts -->
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
             <a class="mail link" href="mailto:info@devstudio.com"
@@ -48,20 +50,18 @@
         </ul>
       </address>
     </header>
-
+<!-- MAIN -->
     <main>
-      <nav>
-        <section>
-          <ul class="list">
-            <li><button type="button">All</button></li>
-            <li><button type="button">Web Site</button></li>
-            <li><button type="button">App</button></li>
-            <li><button type="button">Design</button></li>
-            <li><button type="button">Marketing</button></li>
-          </ul>
-        </section>
-      </nav>
+      <h1 hidden>Portfolio</h1>
       <section>
+        <ul class="list">
+          <li><button class="portfolio-buttons" type="button">All</button></li>
+          <li><button class="portfolio-buttons" type="button">Web Site</button></li>
+          <li><button class="portfolio-buttons" type="button">Design</button></li>
+          <li><button class="portfolio-buttons" type="button">Marketing</button></li>
+          <li><button class="portfolio-buttons" type="button">App</button></li>
+        </ul>
+
         <ui class="list">
           <li>
             <img
@@ -70,8 +70,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <h2 class="team-text">Banking App Interface Concept</h2>
+            <p class="team-secondary-text">App</p>
           </li>
           <li>
             <img
@@ -80,8 +80,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h2 class="team-text">Cashless Payment</h2>
+            <p class="team-secondary-text">Marketing</p>
           </li>
           <li>
             <img
@@ -90,13 +90,9 @@
               width="360"
               height="300"
             />
-            <h3>Meditaion App</h3>
-            <p>App</p>
+            <h2 class="team-text">Meditaion App</h2>
+            <p class="team-secondary-text">App</p>
           </li>
-        </ui>
-      </section>
-      <section>
-        <ul class="list">
           <li>
             <img
               src="./images/project/driver.jpg"
@@ -104,8 +100,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h2 class="team-text">Taxi Service</h2>
+            <p class="team-secondary-text">Marketing</p>
           </li>
           <li>
             <img
@@ -114,8 +110,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h2 class="team-text">Screen Illustrations</h2>
+            <p class="team-secondary-text">Design</p>
           </li>
           <li>
             <img
@@ -124,13 +120,9 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h2 class="team-text">Online Courses</h2>
+            <p class="team-secondary-text">Marketing</p>
           </li>
-        </ul>
-      </section>
-      <section>
-        <ul class="list">
           <li>
             <img
               src="./images/project/instagram.jpg"
@@ -138,8 +130,8 @@
               width="360"
               height="300"
             />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+            <h2 class="team-text">Instagram Stories Concept</h2>
+            <p class="team-secondary-text">Design</p>
           </li>
           <li>
             <img
@@ -148,20 +140,22 @@
               width="360"
               height="300"
             />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+            <h2 class="team-text">Organic Food</h2>
+            <p class="team-secondary-text">Web Site</p>
           </li>
           <li>
             <img src="./images/project/coffee.jpg" alt="coffee" />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+            <h3 class="team-text">Fresh Coffee</h3>
+            <p class="team-secondary-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a class="link" href="./index.html">WebStudio</a>
-      <p class="text-description">
+    <footer class="footer">
+      <a class="logo link" href="./index.html"
+        >Web<span class="footer-logo-studio">Studio</span>
+      </a>
+      <p class="footer-text-description">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
